# sea-automation-agency

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml  program.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  zalo_openclaw_setup.sh
.github/workflows/: ci.yml
case_studies/: vinfast_phuc_loi_en.md  vinfast_phuc_loi_vi.md
clients/: README.md
crm/: README.md  add_lead.py  pipeline_report.py  setup_crm.py  update_status.py
dashboard/: app.py  server.py
dashboard/templates/: index.html
docs/: market_plan.md
leads/: README.md  lead_source_research.md  qualify_leads.py
leads/scrapers/: facebook_group_leads.py  google_maps_leads.py  hunter_enrichment.py  shopee_category_leads.py
outreach/: .reply_monitor_state.json  reply_monitor.py  send_sequence.py  test_security_fixes.py  test_send_sequence.py  zalo_sequence.py
outreach/templates/: email_1_cold_en.md  email_1_cold_vi.md  email_2_followup_en.md  email_2_followup_vi.md  email_3_breakup_en.md  email_3_breakup_vi.md  zalo_1_cold_vi.md  zalo_2_followup_vi.md  (+1 more)
proposals/: generate_proposal.py
reports/: generate_monthly_report.py
scripts/: auth_setup.py  fix_crm_auth.sh  fix_spf_record.sh  metrics_tracker.py  quality_loop.py  reauth_all_scopes.sh  setup.sh  setup_vela_domain.sh
tests/: conftest.py  test_crm.py  test_facebook_group_leads.py  test_generate_proposal.py  test_google_maps_leads.py  test_inventory_alerts.py  test_order_sync.py  test_qualify_leads.py  test_reporting_dashboard.py  test_retry.py  test_send_sequence.py
utils/: retry.py
(+10 files in other folders)
